--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.10",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "framer-motion": "^11.15.0",
@@ -21,6 +22,7 @@
     "react-icons": "^5.4.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^7.1.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.2",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.15"
