--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^7.1.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2",
     "react-tooltip": "^5.28.0",
     "sort-by": "^1.2.0",
